<?xml version="1.0"?>
<package format="2">
  <name>uwb_ins_eskf_msgs</name>
  <version>1.0.0</version>
  <description>

     Messages for UWB/INS ESKF Fusion.

  </description>
  <author>Oscar Chen</author>
  <maintainer email="cwcoscar@gmail.com">Veronica Lane</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


</package>
